tests/NormalTests/paczka1/small_fuzzy/24903913.err
Error in line 1: ycCsyd S173 50,8
Error in line 7: ycCsyd S662 44,1
Error in line 10: ycCsyd S173 72,0
